fixed longtext submit function and wrapped text

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -21,6 +21,11 @@ section.new-tweet {
   float: right;
 }
 
+.tweet-here {
+  flex-wrap: wrap;
+  overflow-wrap: break-word;
+}
+
 input, .counter {
   display: inline-flex;
   justify-content: space-between;
